--- a/ambrosiaDesign.css
+++ b/ambrosiaDesign.css
@@ -15,6 +15,7 @@ header{
   width:100%;
   z-index: 999;
   width: 100%;
+
 }
 
 ul {
@@ -25,8 +26,12 @@ ul {
     background-color: #ccc;
 }
 
-li {
+nav li {
     float: left;
+}
+
+#myList {
+  background-color: white;
 }
 
 li a {
@@ -51,6 +56,7 @@ li a:hover:not(.active) {
 body {
     font-family: Arial, Helvetica, sans-serif;
     z-index: 0;
+    padding-top: 18vw;
 }
 
 #myBtn {
