--- a/ambrosiaDesign.css
+++ b/ambrosiaDesign.css
@@ -34,7 +34,7 @@ nav {
 
 }
 
-nav ul {
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -57,10 +57,19 @@ nav li {
 
 #myList {
   background-color: white;
+  clear: left;
+  text-align: left;
+  padding-left: 10px;
 }
 
 #myList ul {
   list-style-type: none;
+  text-align: left;
+  padding-left: 10px;
+}
+
+#removeAllButton {
+  clear: left;
 }
 
 nav li a {
