--- a/ambrosiaDesign.css
+++ b/ambrosiaDesign.css
@@ -37,7 +37,7 @@ nav {
   max-height: 500px;
 }
 
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -135,19 +135,10 @@ nav li {
 
 #myList {
   background-color: white;
-  clear: left;
-  text-align: left;
-  padding-left: 10px;
 }
 
 #myList ul {
   list-style-type: none;
-  text-align: left;
-  padding-left: 10px;
-}
-
-#removeAllButton {
-  clear: left;
 }
 
 nav li a {
@@ -278,63 +269,7 @@ td {
   width: 5vw;
   /* border: 1px solid black; */
 }
-
 /* .container {
   z-index: 2;
   clear: left;
 } */
-
-
-/* The dropdown container */
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: #ffb366;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
-
-/* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-/* Dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
