--- a/ambrosiaDesign.css
+++ b/ambrosiaDesign.css
@@ -133,12 +133,12 @@ nav li {
   font-size: calc(15px + 1vh);
 }
 
-#myList {
+/* #myList {
   background-color: white;
   clear: left;
   text-align: left;
   padding-left: 10px;
-}
+} */
 
 #myList ul {
   list-style-type: none;
@@ -337,4 +337,3 @@ td {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
